// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders datepicker with an error message without crashing 1`] = `
<div
  className="formGroup inline datePickerContainer "
  id="date-picker-container"
>
  
  <label
    className="controlLabel controlLabelError"
    htmlFor="date-picker"
  >
    DatePicker
  </label>
  <div
    className="innerContainer"
  >
    <Datepicker
      className="formControl formControlError"
      disabled={false}
      id="date-picker"
      name="date-picker"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      selected={null}
    />
    
    <span
      className="error"
    >
      <strong
        className="info"
      >
        An Error
      </strong>
      with useful hints
    </span>
  </div>
</div>
`;

exports[`Renders datepicker without crashing 1`] = `
<div
  className="formGroup inline datePickerContainer "
  id="date-picker-container"
>
  
  <label
    className="controlLabel "
    htmlFor="date-picker"
  >
    DatePicker
  </label>
  <div
    className="innerContainer"
  >
    <Datepicker
      className="formControl "
      disabled={false}
      id="date-picker"
      name="date-picker"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      selected={null}
    />
    
  </div>
</div>
`;
